--- a/JavaScript Essentials And Advanced/style.css
+++ b/JavaScript Essentials And Advanced/style.css
@@ -8,7 +8,7 @@ form{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: antiquewhite;
+    background-color: rgb(237, 187, 121);
   }
  
 table{
@@ -16,7 +16,7 @@ table{
       padding: 60px;
   }
   tr{
-      border-bottom: 1px solid black;
+      border-bottom: 1px solid rgb(122, 79, 79);
   }
   td{
       width: 5%;
@@ -28,8 +28,8 @@ table{
   }
   #btn{
       padding: 10px;
-      background-color: green;
-      color: white;
+      background-color: rgb(62, 195, 243);
+      color: rgb(0, 27, 10);
       cursor: pointer;
       border: none;
       border-radius: 5px;
